Fix surfaced color contrast and ID issues

--- a/src/sass/stream.scss
+++ b/src/sass/stream.scss
@@ -75,7 +75,7 @@ main a {
 
 	.timecode {
 		font-variation-settings: unset;
-		color: var(--gray-6);
+		color: var(--gray-7);
 		display: block;
 		font-size: x-small;
 		font-style: normal;
